--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="navbar-brand">
             <a href="{{ site.baseurl }}/" class="navbar-item has-text-white">
-                <img src="/assets/images/explicit consulting, color on transparent, company only.png" alt="ExplicIT Consulting">
+                <img src="/assets/images/set-outlooksignatures logo.png" alt="ExplicIT Consulting">
             </a>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu" :class="{ 'is-active': openNav }" x-on:click="openNav = !openNav">
                 <span aria-hidden="true"></span>
