--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
                 {% for item in site.data[site.footer_menu] %}
                 <div class="column has-text-centered">
                     <div>
-                        <a href="{{ item.link | relative_url }}" target="_blank">{{ item.name }}</a>
+                        <a href="{{ item.link | relative_url }}">{{ item.name }}</a>
                     </div>
                 </div>
                 {% endfor %}
