--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,6 @@
 ---
 ---
-$family-primary: Calibri, "Segoe UI", Candara, Arial, "Helvetica Neue", Helvetica, sans-serif;
+$family-primary: Arial, sans-serif;;
 $primary: black;
 $text: black;
 
