--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,35 +1,28 @@
 ---
 ---
-$family-primary: Arial, sans-serif;;
+
+$family-primary: Arial, sans-serif;
 $primary: black;
 $text: black;
-
 
 // Import Main CSS file from theme
 @import "main";
 
 .html {
-    scroll-padding-top: $navbar-height;
+  scroll-padding-top: $navbar-height;
 }
 
 .section {
-    h1, h2, h3, h4, h5, h6 {
-        scroll-margin-top: $navbar-height;
-    }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    scroll-margin-top: $navbar-height;
+  }
 }
 
 body {
-    -webkit-hyphens: auto;
-    -webkit-hyphenate-limit-before: 3;
-    -webkit-hyphenate-limit-after: 3;
-    -webkit-hyphenate-limit-chars: 6 3 3;
-    -webkit-hyphenate-limit-lines: 2;
-    -webkit-hyphenate-limit-last: always;   
-    -webkit-hyphenate-limit-zone: 8%;
-
-    hyphens: auto;
-    hyphenate-limit-chars: 6 3 3;
-    hyphenate-limit-lines: 2;
-    hyphenate-limit-last: always;   
-    hyphenate-limit-zone: 8%;
+  hyphens: auto;
 }
