fix: refactor heading font-weight styling for consistency

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -23,13 +23,26 @@ $text: black;
   }
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: bold;
+.title {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: bold;
+  }
+}
+
+.content {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: bold;
+  }
 }
 
 body {
