fix: refine wording in footer for clarity on cookie and analytics usage

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,6 @@
     </div>
     <div class="content is-small has-text-centered">
         <p>&nbsp;</p>
-        <p>This site does not use any cookies or external analytics tools, so you do not have to provide consent or define allowed services. For our privacy notice, see the links above.</p>
+        <p>This site does not use cookies or analytic tools requiring you to consent or define allowed services. For our privacy notice, see the links above.</p>
     </div>
 </footer>
