fix: enhance language switcher integration and optimize redirection logic

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
                     <span></span>
                 </a>
 
-                <div class="language-switcher">
+                <div class="navbar-item language-switcher">
                 <select id="language-select">
                     <option value="en">English</option>
                     <option value="de">Deutsch</option>
