fix: adjust language switcher markup for consistency in structure

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,11 +37,11 @@
                     <span></span>
                 </a>
 
-                <div class="navbar-item language-switcher">
-                <select id="language-select">
-                    <option value="en">English</option>
-                    <option value="de">Deutsch</option>
-                </select>
+                <div class="navbar-item">
+                    <select id="language-select">
+                        <option value="en">English</option>
+                        <option value="de">Deutsch</option>
+                    </select>
                 </div>
                 
                 {% if site.gh_sponsor %}
