fix: update language selector default option and enhance language detection logic

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
 
                 <div class="navbar-item">
                     <select id="language-select">
-                        <option value="" selected disabled>Automatic</option>
+                        <option value="" selected disabled>language</option>
                         <option value="en">English</option>
                         <option value="de">Deutsch</option>
                     </select>
