fix: update text to enhance clarity and consistency in various documents

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -25,6 +25,7 @@ $text: black;
 
 .title {
   font-weight: bold;
+  hyphens: manual;
 }
 
 .title {
@@ -35,6 +36,7 @@ $text: black;
   h5,
   h6 {
     font-weight: bold;
+    hyphens: manual;
   }
 }
 
@@ -46,6 +48,7 @@ $text: black;
   h5,
   h6 {
     font-weight: bold;
+    hyphens: manual;
   }
 }
 
