--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,12 @@
-<nav class="navbar is-primary {% if site.fixed_navbar %} is-fixed-{{ site.fixed_navbar }} {% endif %}" x-data="{ openNav: false }">
+<nav class="navbar is-primary {% if site.fixed_navbar %} is-fixed-{{ site.fixed_navbar }} {% endif %}"
+    x-data="{ openNav: false }">
     <div class="container">
         <div class="navbar-brand">
             <a href="{{ site.baseurl }}/" class="navbar-item has-text-white">
                 <img src="/assets/images/set-outlooksignatures logo.png" alt="Set-OutlookSignatures">
             </a>
-            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu" :class="{ 'is-active': openNav }" x-on:click="openNav = !openNav">
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu"
+                :class="{ 'is-active': openNav }" x-on:click="openNav = !openNav">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
@@ -14,20 +16,27 @@
             <div class="navbar-start">
                 <!-- <a href="{{ site.baseurl }}/" class="navbar-item has-text-white {% if page.url == "/" %}is-active{% endif %}">Features</a> -->
                 {% if site.data.navigation %}
-                    {% for item in site.data.navigation %}
-                        {% if item.dropdown %}
-                        <div class="navbar-item has-dropdown is-hoverable {% if site.fixed_navbar == 'bottom' %} has-dropdown-up {% endif %}">
-                            <a href="{{ item.link | relative_url }}" class="navbar-link has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{ item.name }}</a>
-                            <div class="navbar-dropdown">
-                                {% for subitem in item.dropdown %}
-                                <a href="{{ subitem.link | relative_url }}" class="navbar-item {% if page.url contains subitem.link %}is-selected{% endif %}">{{ subitem.name }}</a>
-                                {% endfor %}
-                            </div>
-                        </div>
-                        {% else %}
-                        <a href="{{ item.link | relative_url }}" class="navbar-item has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{ item.name }}</a>
-                        {% endif %}
-                    {% endfor %}
+                {% for item in site.data.navigation %}
+                {% if item.dropdown %}
+                <div
+                    class="navbar-item has-dropdown is-hoverable {% if site.fixed_navbar == 'bottom' %} has-dropdown-up {% endif %}">
+                    <a href="{{ item.link | relative_url }}"
+                        class="navbar-link has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{
+                        item.name }}</a>
+                    <div class="navbar-dropdown">
+                        {% for subitem in item.dropdown %}
+                        <a href="{{ subitem.link | relative_url }}"
+                            class="navbar-item {% if page.url contains subitem.link %}is-selected{% endif %}">{{
+                            subitem.name }}</a>
+                        {% endfor %}
+                    </div>
+                </div>
+                {% else %}
+                <a href="{{ item.link | relative_url }}"
+                    class="navbar-item has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{
+                    item.name }}</a>
+                {% endif %}
+                {% endfor %}
                 {% endif %}
             </div>
 
@@ -37,11 +46,19 @@
                     <span></span>
                 </a>
 
+                <div class="navbar-item has-text-white">
+                    <select id="language" name="language" onchange="location.reload()">
+                        <option value="">Language</option>
+                        <option value="en">English</option>
+                        <option value="de">German</option>
+                    </select>
+                </div>
+
                 {% if site.gh_sponsor %}
-                    <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}">
-                        <span class="icon gh-sponsor"><i class="fas fa-heart"></i></span>
-                        <span>Sponsor</span>
-                    </a>
+                <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}">
+                    <span class="icon gh-sponsor"><i class="fas fa-heart"></i></span>
+                    <span>Sponsor</span>
+                </a>
                 {% endif %}
             </div>
         </div>
