fix: update language dropdown handling to use localStorage for persistence

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
                 </a>
 
                 <div class="navbar-item has-text-white">
-                    <select id="languageDropdown" name="languageDropdown" onchange="location.reload()">
+                    <select id="languageDropdown" name="languageDropdown" onchange="localStorage.setItem('languageDropdownValue', this.value); location.reload();">
                         <option value="">Language</option>
                         <option value="en">English</option>
                         <option value="de">German</option>
