fix: set default language to English in dropdown and update language selection handling

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,8 +48,7 @@
 
                 <div class="navbar-item has-text-white">
                     <select id="languageDropdown" name="languageDropdown" onchange="localStorage.setItem('languageDropdownValue', this.value); location.reload();">
-                        <option value="">Language</option>
-                        <option value="en">English</option>
+                        <option value="en" select>English</option>
                         <option value="de">German</option>
                     </select>
                 </div>
