fix: correct .title class definition by removing duplicate font-weight property

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -23,9 +23,12 @@ $text: black;
   }
 }
 
+.title {
+  font-weight: bold;
+}
+
 .title,
 .subtitle {
-  font-weight: bold;
   hyphens: manual;
 
   h1,
