--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
             </a>
         </div>
         <div class="navbar-menu" id="navMenu" :class="{ 'is-active': openNav }">
@@ -47,7 +48,8 @@
                 </a>
 
                 <div class="navbar-item has-text-white">
-                    <select id="languageDropdown" name="languageDropdown" onchange="localStorage.setItem('languageDropdownValue', this.value); location.reload();">
+                    <select id="languageDropdown" name="languageDropdown"
+                        onchange="localStorage.setItem('languageDropdownValue', this.value); location.reload();">
                         <option value="en">English</option>
                         <option value="de">German</option>
                     </select>
