--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,7 @@
                     <select id="languageDropdown" name="languageDropdown"
                         onchange="localStorage.setItem('languageDropdownValue', this.value); location.reload();">
                         <option value="en">English</option>
-                        <option value="de">German</option>
+                        <option value="de">Deutsch</option>
                     </select>
                 </div>
 
