Revert "fix: implement dynamic navbar loading based on user language preference"
This reverts commit d247242d5d705d014decedf9690887730234739f.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,75 +13,32 @@
                 <span aria-hidden="true"></span>
             </a>
         </div>
-
-
-        <script id="nav-default" type="application/json">
-            {{ site.data.navigation | jsonify }}
-        </script>
-
-        {% assign nav_files = site.data | keys | where_exp: "key", "key contains 'navigation_'" %}
-        {% for nav_key in nav_files %}
-            <script id="nav-{{ nav_key | remove: 'navigation_' }}" type="application/json">
-                {{ site.data[nav_key] | jsonify }}
-            </script>
-        {% endfor %}
-
         <div class="navbar-menu" id="navMenu" :class="{ 'is-active': openNav }">
             <div class="navbar-start">
                 <!-- <a href="{{ site.baseurl }}/" class="navbar-item has-text-white {% if page.url == "/" %}is-active{% endif %}">Features</a> -->
-                <script>
-                    document.addEventListener("DOMContentLoaded", function () {
-                        const preferredLanguage = localStorage.getItem("languageDropdownValue") || "default";
-                        const navbar = document.getElementById("navbar-start");
-
-                        function buildNavbar(navData) {
-                            navbar.innerHTML = "";
-
-                            navData.forEach(item => {
-                                if (item.dropdown) {
-                                    const dropdown = document.createElement("div");
-                                    dropdown.className = "navbar-item has-dropdown is-hoverable";
-
-                                    const link = document.createElement("a");
-                                    link.href = item.link;
-                                    link.className = "navbar-link has-text-white";
-                                    link.textContent = item.name;
-
-                                    const dropdownMenu = document.createElement("div");
-                                    dropdownMenu.className = "navbar-dropdown";
-
-                                    item.dropdown.forEach(subitem => {
-                                        const subLink = document.createElement("a");
-                                        subLink.href = subitem.link;
-                                        subLink.className = "navbar-item";
-                                        subLink.textContent = subitem.name;
-                                        dropdownMenu.appendChild(subLink);
-                                    });
-
-                                    dropdown.appendChild(link);
-                                    dropdown.appendChild(dropdownMenu);
-                                    navbar.appendChild(dropdown);
-                                } else {
-                                    const link = document.createElement("a");
-                                    link.href = item.link;
-                                    link.className = "navbar-item has-text-white";
-                                    link.textContent = item.name;
-                                    navbar.appendChild(link);
-                                }
-                            });
-                        }
-
-                        function loadNavbarForLanguage(lang) {
-                            const navScript = document.getElementById("nav-" + lang) || document.getElementById("nav-default");
-                            if (navScript) {
-                                const navData = JSON.parse(navScript.textContent);
-                                buildNavbar(navData);
-                            }
-                        }
-
-                        loadNavbarForLanguage(preferredLanguage);
-                    });
-                </script>
+                {% if site.data.navigation %}
+                {% for item in site.data.navigation %}
+                {% if item.dropdown %}
+                <div
+                    class="navbar-item has-dropdown is-hoverable {% if site.fixed_navbar == 'bottom' %} has-dropdown-up {% endif %}">
+                    <a href="{{ item.link | relative_url }}"
+                        class="navbar-link has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{
+                        item.name }}</a>
+                    <div class="navbar-dropdown">
+                        {% for subitem in item.dropdown %}
+                        <a href="{{ subitem.link | relative_url }}"
+                            class="navbar-item {% if page.url contains subitem.link %}is-selected{% endif %}">{{
+                            subitem.name }}</a>
+                        {% endfor %}
+                    </div>
+                </div>
+                {% else %}
+                <a href="{{ item.link | relative_url }}"
+                    class="navbar-item has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{
+                    item.name }}</a>
+                {% endif %}
+                {% endfor %}
+                {% endif %}
             </div>
 
             <div class="navbar-end">
