feat: add anchor links to headings for improved navigation and adjust CSS for better layout

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -62,8 +62,21 @@ pre code {
   color: black;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  position: relative;
+  padding-left: 1.5em; /* Adjust based on icon size */
+}
+
 .anchor-link {
-  margin-right: 8px;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
   text-decoration: none;
   opacity: 0;
   font-size: 0.8em;
@@ -72,4 +85,3 @@ pre code {
 .anchor-link:hover {
   opacity: 1;
 }
-
