feat: add external link icon to outbound links for better user experience

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -62,7 +62,7 @@ pre code {
   color: black;
 }
 
-/* Make headings the positioning containers. No other changes needed here. */
+/* Make headings the positioning containers. */
 h1,
 h2,
 h3,
